--- a/settings.gradle
+++ b/settings.gradle
@@ -6,10 +6,7 @@ include ':howdyfx'
 
 include ':assign01'
 include ':assign02'
-include ':assign03'
-include ':assign04'
-include ':assign05'
 
 include ':profexercises02'
-include ':profexercises'
+include ':profexercises03'
 
