--- a/assign02/build.gradle
+++ b/assign02/build.gradle
@@ -18,7 +18,7 @@ test {
 }
 
 application {
-    mainClass = "edu.realemj.assign02.CharacterCreation"
+    mainClass = "edu.letourlt.assign02.CharacterCreation"
     mainModule = "assign02mod"
 }
 
