--- a/assign03/build.gradle
+++ b/assign03/build.gradle
@@ -18,7 +18,7 @@ test {
 }
 
 application {
-    mainClass = "edu.letourlt.assign03.LetterPrinter"
+    mainClass = "edu.realemj.assign03.LetterPrinter"
     mainModule = "assign03mod"
 }
 
