--- a/settings.gradle
+++ b/settings.gradle
@@ -7,6 +7,10 @@ include ':howdyfx'
 include ':assign01'
 include ':assign02'
 include ':assign03'
+include ':assign04'
+include ':assign05'
+include ':assign06'
+include ':assign07'
 
 include ':profexercises02'
 include ':profexercises03'
