--- a/assign06/build.gradle
+++ b/assign06/build.gradle
@@ -20,7 +20,7 @@ test {
 }
 
 application {
-    mainClass = "edu.realemj.assign06.KingsField"
+    mainClass = "edu.letourlt.assign06.KingsField"
     mainModule = "assign06mod"
 }
 
